# edge-defender-cleaner

./: LICENSE  README.md  pack_crty.py
defender-remover/: Cargo.toml  build.rs
defender-remover/src/: crypto.rs  crypto_key.rs  main.rs  ui.rs  updater.rs
defender-remover/src/ops/: appx.rs  edge.rs  files.rs  mod.rs  registry.rs  services.rs
defender-remover/src/utils/: admin.rs  logger.rs  mod.rs
