[package]
name = "defender-remover"
version = "13.0.0"
edition = "2021"
authors = ["EdgeDefender Cleaner — Rust Edition"]
description = "EdgeDefender Cleaner — Windows Defender + Microsoft Edge Unified Removal Tool"
build = "build.rs"

[[bin]]
name = "EdgeDefenderCleaner"
path = "src/main.rs"

[dependencies]
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
anyhow = "1.0"
winreg = "0.52"
ctrlc = "3.4"
zip = "0.6"
aes = "0.9.1"
cbc = "0.2.1"
md-5 = "0.11.0"
hex = "0.4.3"
cipher = { version = "0.5.2", features = ["block-padding", "alloc"] }
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
